--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: Platane/snk@v3
         with:
-          github_user_name: <your-github-username>
+          github_user_name: Adith1207
           outputs: |
             dist/snake.svg
             dist/snake-dark.svg?palette=github-dark
